k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - hello.protoss.cf
      secretName: wildcard
  rules:
  - host: hello.protoss.cf
    http:
      paths:
      - backend:
          service:
            name: hello-kubernetes
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
